# decant

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SKILL.md  benchmark.py  install.sh
.github/workflows/: release.yml
crates/decant/: Cargo.toml
crates/decant-cli/: Cargo.toml
crates/decant-cli/src/: args.rs  main.rs
crates/decant-cli/src/commands/: tokens.rs
crates/decant-cli/tests/: clone_integration.rs
crates/decant-core/: Cargo.toml
crates/decant-core/src/: client.rs  cookie.rs  error.rs  frontier.rs  lib.rs  rate.rs  robots.rs  writer.rs
crates/decant-extract/: Cargo.toml
crates/decant-extract/src/: context.rs  css.rs  css_tests.rs  error.rs  html.rs  html_rewrite.rs  html_tests.rs  js.rs  lib.rs  manifest.rs  tokens.rs
crates/decant-render/: Cargo.toml
crates/decant-render/src/: backend.rs  browser.rs  error.rs  lib.rs  page.rs  runtime.rs  runtime_tests.rs  screenshot.rs
crates/decant-tui/: Cargo.toml
crates/decant-tui/src/: dashboard.rs  error.rs  lib.rs  progress.rs  state.rs
crates/decant/src/: args.rs  main.rs
crates/decant/src/commands/: clone.rs  clone_repair.rs  clone_tests.rs  mod.rs  serve.rs  verify.rs
crates/decant/tests/: clone_integration.rs
npm/: LICENSE  README.md  install.js  package.json
