[package]
name        = "decant-extract"
description = "HTML/CSS parsing, link rewriting, design-token and manifest extraction for decant"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
scraper      = { workspace = true }
lightningcss = { workspace = true }
url          = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
mime_guess   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
rstest   = { workspace = true }
proptest = { workspace = true }
