[package]
name        = "decant-render"
description = "Headless-Chrome SPA rendering for decant (feature-gated)"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[features]
default = []
# Enable headless-Chrome rendering via chromiumoxide.
# The default binary stays dependency-free from Chrome.
render = ["dep:chromiumoxide", "dep:tokio"]

[dependencies]
decant-core   = { path = "../decant-core" }
chromiumoxide = { workspace = true, optional = true }
tokio         = { workspace = true, optional = true }
futures       = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
url           = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
