[package]
name        = "decant-tui"
description = "Ratatui 0.30 live dashboard and indicatif fallback for decant"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[dependencies]
# ratatui 0.30 — includes crossterm backend via "crossterm" feature
ratatui   = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
tokio     = { workspace = true }
futures   = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
