[package]
name        = "decant"
description = "CLI binary for decant — mirrors websites and extracts design systems for AI agents"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true

[[bin]]
name = "decant"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = []
# Pull in chromiumoxide headless-Chrome rendering via decant-render
render = ["decant-render/render"]

[dependencies]
decant-core    = { workspace = true }
decant-extract = { workspace = true }
decant-render  = { workspace = true }
decant-tui     = { workspace = true }

clap               = { workspace = true }
tokio              = { workspace = true }
color-eyre         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
url                = { workspace = true }
atty               = { workspace = true }
chrono             = { workspace = true }
mime_guess         = { workspace = true }
sha2               = { workspace = true }
hex                = { workspace = true }

[dev-dependencies]
rstest   = { workspace = true }
tokio    = { workspace = true }
tempfile = "3"
